# bazel-wasmtime-c-api

./: BUILD  Cargo.toml  README.md  WORKSPACE  example.cc
bazel/cargo/: BUILD.bazel  crates.bzl
bazel/cargo/remote/: BUILD.atty-0.2.14.bazel  BUILD.backtrace-0.3.53.bazel  BUILD.const_fn-0.4.2.bazel  BUILD.cranelift-bforest-0.67.0.bazel  BUILD.cranelift-codegen-0.67.0.bazel  BUILD.cranelift-codegen-meta-0.67.0.bazel  BUILD.cranelift-codegen-shared-0.67.0.bazel  BUILD.cranelift-entity-0.67.0.bazel  BUILD.cranelift-frontend-0.67.0.bazel  BUILD.cranelift-native-0.67.0.bazel  BUILD.cranelift-wasm-0.67.0.bazel  BUILD.crossbeam-channel-0.5.0.bazel  BUILD.crossbeam-deque-0.8.0.bazel  BUILD.crossbeam-epoch-0.9.0.bazel  BUILD.crossbeam-utils-0.8.0.bazel  BUILD.dirs-sys-0.3.5.bazel  BUILD.errno-0.2.7.bazel  BUILD.errno-dragonfly-0.1.1.bazel  BUILD.flate2-1.0.18.bazel  BUILD.getrandom-0.1.15.bazel  BUILD.gimli-0.21.0.bazel  BUILD.gimli-0.22.0.bazel  BUILD.hashbrown-0.9.1.bazel  BUILD.hermit-abi-0.1.17.bazel  BUILD.indexmap-1.6.0.bazel  BUILD.jobserver-0.1.21.bazel  BUILD.mach-0.3.2.bazel  BUILD.num_cpus-1.13.0.bazel  BUILD.object-0.19.0.bazel  BUILD.object-0.21.1.bazel  BUILD.raw-cpuid-7.0.3.bazel  BUILD.rayon-1.5.0.bazel  BUILD.rayon-core-1.9.0.bazel  BUILD.region-2.2.0.bazel  BUILD.scopeguard-1.1.0.bazel  BUILD.wasmtime-0.20.0.bazel  BUILD.wasmtime-cache-0.20.0.bazel  BUILD.wasmtime-cranelift-0.20.0.bazel  BUILD.wasmtime-debug-0.20.0.bazel  BUILD.wasmtime-environ-0.20.0.bazel  (+6 more)
