[package]
name = "wasmtime-c-api-bazel"
version = "0.20.0"
edition = "2018"

[lib]
name = "wasmtime"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib"]
doc = false
test = false
doctest = false
proc-macro = true

[dependencies]
env_logger = "0.7"
anyhow = "1.0"
once_cell = "1.3"
wasmtime = "0.20.0"
wasmtime-c-api-macros = { git = "https://github.com/bytecodealliance/wasmtime", tag = "v0.20.0", path = "crates/c-api/macros"}
wat = { version = "1.0.23", optional = true }

[features]
default = ['jitdump', 'wat', 'cache']
lightbeam = ["wasmtime/lightbeam"]
jitdump = ["wasmtime/jitdump"]
cache = ["wasmtime/cache"]

[raze]
workspace_path = "//bazel/cargo"
genmode = "Remote"

[raze.crates.target-lexicon.'0.11.1']
gen_buildrs = true
additional_flags = [
    "--cfg=feature=\\\"force_unix_path_separator\\\"",
]

[raze.crates.typenum.'1.12.0']
gen_buildrs = true

[raze.crates.proc-macro2.'1.0.24']
additional_flags = [
    "--cfg=use_proc_macro",
]

[raze.crates.log.'0.4.11']
additional_flags = [
    "--cfg=atomic_cas"
]

# [raze.crates.object.'0.21.1']
# additional_flags = [
#     "--cfg=read", "--cfg=write",
# ]

# https://github.com/google/cargo-raze/issues/138
[raze.crates.scroll.'0.10.2']
patches = ["//bazel/patches:scroll-0.10.2-remove_doc_requirement.diff"]
patch_args = ["-p1"]
