[package]
name = "wasmtime-c-api-bazel"
version = "0.20.0"
edition = "2018"

[lib]
name = "wasmtime"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib"]
doc = false
test = false
doctest = false
proc-macro = true

[dependencies]
object = { version = "=0.21.1", default-features = false, features = ["write"] }
env_logger = "0.7"
anyhow = "1.0"
once_cell = "1.3"
wasmtime =  { git = "https://github.com/bytecodealliance/wasmtime", tag = "v0.20.0", path = "crates/wasmtime", default-features = false  }
wasmtime-c-api-macros = { git = "https://github.com/bytecodealliance/wasmtime", tag = "v0.20.0", path = "crates/c-api/macros"}
wat = { version = "1.0.23", optional = true }
indexmap = { version = "=1.1.0", features = ["serde-1"]}

[features]
default = ['jitdump', 'wat', 'cache']
lightbeam = ["wasmtime/lightbeam"]
jitdump = ["wasmtime/jitdump"]
cache = ["wasmtime/cache"]

[raze]
workspace_path = "//bazel/cargo"
genmode = "Remote"

[raze.crates.wasmtime-cache.'0.20.0']
patches = ["//bazel/patches:wasmtime-0.20.0-fix-git-rev.diff"]
patch_args = ["-p1"]

[raze.crates.target-lexicon.'0.11.1']
gen_buildrs = true
additional_flags = [
    "--cfg=feature=\\\"force_unix_path_separator\\\"",
]

[raze.crates.cranelift-codegen.'0.67.0']
gen_buildrs = true

[raze.crates.typenum.'1.12.0']
gen_buildrs = true

[raze.crates.proc-macro2.'1.0.24']
additional_flags = [
    "--cfg=use_proc_macro",
]

[raze.crates.log.'0.4.11']
additional_flags = [
    "--cfg=atomic_cas"
]

[raze.crates.indexmap.'1.1.0']
additional_flags = [
    "--cfg=feature=\\\"serde-1\\\"",
]

[raze.crates.scroll.'0.10.2']
features = ["read", "write"]
data_attr = "[\"README.md\"]"

[raze.crates.raw-cpuid.'7.0.3']
gen_buildrs = true
additional_flags = [
    "--cfg=feature=\\\"bindgen\\\"",
]

[raze.crates.zstd-sys.'1.4.17']
gen_buildrs = true
additional_flags = [
    "--cfg=feature=\\\"zstd-safe/std\\\"",
]
